fix: align the content in the header

--- a/src/app/fl-language/fl-language.component.scss
+++ b/src/app/fl-language/fl-language.component.scss
@@ -1,5 +1,4 @@
 .dropdown{
-    padding-left: 20rem;
     display:flex;
     flex-direction: column;
     row-gap: 0.5rem;
@@ -21,7 +20,10 @@
     width: 7rem;
     justify-content: space-evenly;
 
-    @media (max-width: 420px) {
+    @media (max-width: 600px) {
+        width: auto;
+        padding: 0.5rem;
+
         .selected, .caret {
           display: none;
           border-radius: 50%;
